--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <section class="login py-2 ">
         <div class="container">
-            <div class="row g-0">
+            <div class="row g-">
                 <div class="col-lg-5">
                     <img src="./images/PageLand1.jpg" class="img-fluid" alt="a laptop and some other gadgets">
                 </div>
@@ -31,7 +31,7 @@
                     </div>
                     <div>
                         <ul class="myList">
-                            <li><a class="intial-scale button" href="index-2.html">New Guest</li></a>
+                            <li><a href="contact.html">New Guest</li></a>
                                 <li><a class="button" href="">Returning Guest</li></a>
                                     <li><a class="button" href="">Prebooked Guest</li></a>
                                         <li><a class="button" href="">Log Out</li></a>
