--- a/laptop-details.html
+++ b/laptop-details.html
@@ -44,12 +44,12 @@
                             <div class="navigation">
                                 <div class="form-row py-2">
                                     <div class="initial-scale col-lg-10">
-                                        <button class="btn1"><a href="index-2.html">Previous</a></button>
+                                        <button class="btn1"><a href="contact.html">Previous</a></button>
 
                                         <div class="sidebar">
                                             <div class="form-row py-2">
                                                 <div class="initial-scale col-lg-10">
-                                                    <button class="btn2"><a href="index4.html">Next</a></button>
+                                                    <button class="btn2"><a href="appointment-record.html">Next</a></button>
                                                 </div>
                                             </div>
                                         </div>
