--- a/contact.html
+++ b/contact.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
     <title>LAsG VMS</title>
-    <link rel="stylesheet" href="css/mystyle2.css">
+    <link rel="stylesheet" href="css/mystyle.css">
 </head>
 
 <body>
-    <section class="login py-2 ">
+    <section class="index py-10">
         <div class="container">
             <div class="row g-0">
                 <div class="col-lg-5">
@@ -53,26 +53,18 @@
                             </div>
                             <br>
                             <div class="navigation">
-                                <div class="form-row py-2">
-                                    <div class="initial-scale col-lg-10">
-                                        <button class="btn1"><a href="index1.html">Previous</a></button>
+                                <button class="button button-white"><a href="index.html">Previous</a></button>
 
-                                        <div class="sidebar">
-                                            <div class="form-row py-2">
-                                                <div class="initial-scale col-lg-10">
-                                                    <button class="btn2"><a href="index3.html">Next</a></button>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
+                                <button class="button button-green"><a href="laptop-details.html">Next</a></button>
                             </div>
-                        </form>
-
-
                     </div>
                 </div>
+                </form>
+
+
             </div>
+        </div>
+        </div>
 
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
