--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                     <div>
                         <ul class="myList">
                             <li><a href="contact.html">New Guest</li></a>
-                                <li><a class="button" href="">Returning Guest</li></a>
-                                    <li><a class="button" href="">Prebooked Guest</li></a>
-                                        <li><a class="button" href="">Log Out</li></a>
+                                <li><a href="">Returning Guest</li></a>
+                                    <li><a href="">Prebooked Guest</li></a>
+                                        <li><a href="">Log Out</li></a>
                         </ul>
                     </div>
                 </div>
