--- a/laptop-details.html
+++ b/laptop-details.html
@@ -42,19 +42,9 @@
                             </div>
                             <br>
                             <div class="navigation">
-                                <div class="form-row py-2">
-                                    <div class="initial-scale col-lg-10">
-                                        <button class="btn1"><a href="contact.html">Previous</a></button>
+                                <button class="button button-white"><a href="contact.html">Previous</a></button>
 
-                                        <div class="sidebar">
-                                            <div class="form-row py-2">
-                                                <div class="initial-scale col-lg-10">
-                                                    <button class="btn2"><a href="appointment-record.html">Next</a></button>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
+                                <button class="button button-green"><a href="appointment-record.html">Next</a></button>
                             </div>
                         </form>
                     </div>
